resolves #38 align terminology with accessibility guidelines for a tabs component

--- a/data/css/tabs.css
+++ b/data/css/tabs.css
@@ -1,9 +1,9 @@
 /*! Asciidoctor Tabs | Copyright (c) 2018-present Dan Allen | MIT License */
-.tabset {
+.tabs {
   margin-bottom: 1.25em;
 }
 
-.tabs > ul {
+.tablist > ul {
   display: flex;
   flex-wrap: wrap;
   list-style: none;
@@ -11,7 +11,7 @@
   padding: 0;
 }
 
-.tabs > ul li {
+.tablist > ul li {
   align-items: center;
   background-color: #fff;
   cursor: pointer;
@@ -22,26 +22,26 @@
   position: relative;
 }
 
-.tabs.ulist > ul li {
+.tablist.ulist > ul li {
   margin: 0;
 }
 
-.tabs > ul p {
+.tablist > ul p {
   line-height: inherit;
   margin: 0;
 }
 
-.tabs.ulist > ul li + li {
+.tablist.ulist > ul li + li {
   margin-left: 0.25em;
 }
 
-.tabset.is-loading .tabs li:not(:first-child),
-.tabset:not(.is-loading) .tabs li:not(.is-active) {
+.tabs.is-loading .tablist li:not(:first-child),
+.tabs:not(.is-loading) .tablist li:not(.is-selected) {
   background-color: #f5f5f5;
 }
 
-.tabset.is-loading .tabs li:first-child::after,
-.tabset:not(.is-loading) .tabs li.is-active::after {
+.tabs.is-loading .tablist li:first-child::after,
+.tabs:not(.is-loading) .tablist li.is-selected::after {
   background-color: inherit;
   content: "";
   display: block;
@@ -52,37 +52,37 @@
   right: 0;
 }
 
-.tab-pane {
+.tabpanel {
   background-color: #fff;
   padding: 1.25em;
 }
 
-.tab-pane > table.tableblock {
+.tabpanel > table.tableblock {
   border-width: 0;
   display: block;
   overflow-x: auto;
 }
 
-.tabs > ul li,
-.tab-pane {
+.tablist > ul li,
+.tabpanel {
   border: 1px solid #dcdcdc;
 }
 
-.tabs > ul li {
+.tablist > ul li {
   border-bottom: 0;
 }
 
-.tabset.is-loading .tab-pane:not(:first-child),
-.tabset:not(.is-loading) .tab-pane:not(.is-active) {
+.tabs.is-loading .tabpanel:not(:first-child),
+.tabs:not(.is-loading) .tabpanel.is-hidden {
   display: none;
 }
 
-.tab-pane > :first-child {
+.tabpanel > :first-child {
   margin-top: 0;
 }
 
-#content .tab-pane > :last-child,
-#content .tab-pane > :last-child > :last-child,
-#content .tab-pane > :last-child > :last-child > li:last-child > :last-child {
+#content .tabpanel > :last-child,
+#content .tabpanel > :last-child > :last-child,
+#content .tabpanel > :last-child > :last-child > li:last-child > :last-child {
   margin-bottom: 0;
 }
